feature/banners-carousel

--- a/src/app/modules/home/components/banners-carrossel/banners-carrossel.component.html
+++ b/src/app/modules/home/components/banners-carrossel/banners-carrossel.component.html
@@ -1,1 +1,95 @@
-<p>banners-carrossel works!</p>
+<div class="col-md-12">
+  <div class="col p-4">  
+    <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+      <div class="carousel-inner">
+        
+        <!-- First -->  
+
+        <div class="carousel-item active">
+          <div class="d-flex flex-wrap row">  
+            <div class="col-md-4 pb-3">
+             <div class="card">
+               <img src="../../../assets/img/milena.jpg" class="rounded" alt="...">
+               <div class="card-img-overlay d-flex align-items-end">
+                 <button type="button" class="banner-button">
+                   <div class="text-uppercase fw-semibold text-white">
+                      Cadastre-se
+                   </div> 
+                  </button>
+               </div>
+             </div>
+            </div>
+            <div class="col-md-4 pb-3">
+             <div class="card">
+               <img src="../../../assets/img/milena.jpg" class="rounded" alt="...">
+               <div class="card-img-overlay d-flex align-items-end">
+                 <button type="button" class="banner-button">
+                   <div class="text-uppercase fw-semibold text-white">
+                      Saiba mais
+                   </div> 
+                  </button>
+               </div>
+             </div>
+            </div>
+            <div class="col-md-4 pb-3">
+             <div class="card">
+               <img src="../../../assets/img/milena.jpg" class="rounded" alt="...">
+               <div class="card-img-overlay d-flex align-items-end">
+                 <button type="button" class="banner-button">
+                   <div class="text-uppercase fw-semibold text-white">
+                      Saiba mais
+                   </div> 
+                  </button>
+               </div>
+             </div>
+            </div>  
+          </div>
+        </div> 
+
+        <!-- Second -->
+
+        <div class="carousel-item">
+          <div class="d-flex flex-wrap row">  
+            <div class="col-md-4 pb-3">
+             <div class="card">
+               <img src="../../../assets/img/milena.jpg" class="rounded" alt="...">
+               <div class="card-img-overlay d-flex align-items-end">
+                 <button type="button" class="banner-button">
+                   <div class="text-uppercase fw-semibold text-white">
+                      Cadastre-se
+                   </div> 
+                  </button>
+               </div>
+             </div>
+            </div>
+            <div class="col-md-4 pb-3">
+             <div class="card">
+               <img src="../../../assets/img/milena.jpg" class="rounded" alt="...">
+               <div class="card-img-overlay d-flex align-items-end">
+                 <button type="button" class="banner-button">
+                   <div class="text-uppercase fw-semibold text-white">
+                      Saiba mais
+                   </div> 
+                  </button>
+               </div>
+             </div>
+            </div>
+            <div class="col-md-4 pb-3">
+             <div class="card">
+               <img src="../../../assets/img/milena.jpg" class="rounded" alt="...">
+               <div class="card-img-overlay d-flex align-items-end">
+                 <button type="button" class="banner-button">
+                   <div class="text-uppercase fw-semibold text-white">
+                      Saiba mai
+                   </div> 
+                  </button>
+               </div>
+             </div>
+            </div>  
+          </div>
+        </div> 
+
+      </div>
+    </div>  
+  </div>
+</div>
