--- a/src/app/modules/main/pages/home/components/app-nav-bar/app-nav-bar.component.html
+++ b/src/app/modules/main/pages/home/components/app-nav-bar/app-nav-bar.component.html
@@ -3,7 +3,7 @@
      
      <div class="col-md-6">
        <a class="navbar-brand" href="#">
-         <img src="../../../assets/img/logo_crediall_complete.png" alt="Creadiall" style="height: 20px; width: 130px;">
+         <img src="assets/img/logo_crediall_complete.png" alt="Creadiall" style="height: 20px; width: 130px;">
        </a>
      </div>
 
@@ -13,7 +13,7 @@
 
     <div class="offcanvas offcanvas-end" tabindex="-1" id="navbarOffcanvasLg" aria-labelledby="navbarOffcanvasLgLabel">
       <div class="offcanvas-header p-4">
-        <img src="../../../assets/img/logo_crediall_complete.png" alt="Creadiall" style="height: 20px; width: 130px;">
+        <img src="assets/img/logo_crediall_complete.png" alt="Creadiall" style="height: 20px; width: 130px;">
         <button type="button" class="btn-close btn-close-black" data-bs-dismiss="offcanvas" aria-label="Close"></button>
       </div>
       <div class="offcanvas-body">
