--- a/src/app/modules/main/pages/home/home.component.html
+++ b/src/app/modules/main/pages/home/home.component.html
@@ -57,7 +57,7 @@
           <p class="fw-bold fs-4 pb-2">Salão de Imóveis - Rio de Janeiro</p>
           <p class="fw-bold fs-6 pb-5">Texto sobre o evento (criar um resumo sobre o evento).</p>
           <div class="d-flex flex-row pb-4">
-            <img src="../../../assets/icons/Pin.png" style="height: 25px; width: 20px;">
+            <img src="assets/icons/Pin.png" style="height: 25px; width: 20px;">
             <p style="line-height: 18px;">
               <span class="fw-bold">
                 &nbsp;&nbsp;Via Parque Shopping - Estacionamento
@@ -75,11 +75,11 @@
               </button>
             </div>
             <div class="event-card-right-section">
-              <img src="../../../assets/icons/calendar.png">
+              <img src="assets/icons/calendar.png">
               <p class="fs-6 fw-semibold">&nbsp;&nbsp;31/01 a 02/02</p>
             </div>
             <div class="event-card-right-section">
-              <img src="../../../assets/icons/clock.png">
+              <img src="assets/icons/clock.png">
               <p class="fs-6 fw-semibold">&nbsp;&nbsp;10h às 22h</p>
             </div>
           </div>
@@ -94,16 +94,16 @@
     <div class="column">
       <p class="title">Realização</p>
       <div class="d-flex felx-column flex-wrap justify-content-evenly pb-5">
-        <img class="pt-5" src="../../../assets/img/kreditos-imobi.png" style="height: 100px; width: 135px;">
-        <img class="pt-5" src="../../../assets/img/homer.png" style="height: 100px; width: 135px;">
-        <img class="pt-5" src="../../../assets/img/logo_crediall_complete.png" style="height: 70px; width: 150px;">
+        <img class="pt-5" src="assets/img/kreditos-imobi.png" style="height: 100px; width: 135px;">
+        <img class="pt-5" src="assets/img/homer.png" style="height: 100px; width: 135px;">
+        <img class="pt-5" src="assets/img/logo_crediall_complete.png" style="height: 70px; width: 150px;">
       </div>
     </div>
     <div class="column p-4">
       <p class="title">Participação</p>
       <div class="d-flex felx-column flex-wrap justify-content-evenly pb-5">
-        <img class="pt-5" src="../../../assets/img/rede_dor.png">
-        <img class="pt-5" src="../../../assets/img/coren.png">
+        <img class="pt-5" src="assets/img/rede_dor.png">
+        <img class="pt-5" src="assets/img/coren.png">
       </div>
     </div>
   </div>
@@ -253,18 +253,18 @@
   <div class="d-flex flex-row flex-wrap text-center">
     <div class="col-md-4 col-12">
       <div class="column p-4">
-        <img class="pb-5" src="../../../assets/img/logo_crediall_complete.png">
+        <img class="pb-5" src="assets/img/logo_crediall_complete.png">
         <div class="d-flex flex-row justify-content-center pb-5">
           <a href="https://www.linkedin.com/feed/">
-            <img src="../../../assets/icons/linkdin.png">
+            <img src="assets/icons/linkdin.png">
           </a>
           &nbsp;&nbsp;&nbsp;
           <a href="https://pt-br.facebook.com/">
-            <img src="../../../assets/icons/facebook.png">
+            <img src="assets/icons/facebook.png">
           </a>
           &nbsp;&nbsp;&nbsp;
           <a href="https://www.instagram.com/">
-            <img src="../../../assets/icons/instagram.png">
+            <img src="assets/icons/instagram.png">
           </a>
         </div>
         <p class="sub-title">Tel: (21) 98283-0243</p>
@@ -275,7 +275,7 @@
         <div class="column p-4">
           <div id="map"></div>
           <div class="d-flex flex-row text-start pt-4" style="max-width: 600px;">
-            <img src="../../../assets/icons/adress-pin.png" style="height: 35px; width: 35px;">
+            <img src="assets/icons/adress-pin.png" style="height: 35px; width: 35px;">
             &nbsp;&nbsp;
             <p class="sub-title">Av. José Silva de Azevedo Neto, 200, Bl 2, Sala 403 Barra da Tijuca - Rio de Janeiro / RJ – CEP: 22775-056</p>
           </div>
