--- a/src/app/modules/main/pages/home/home.component.css
+++ b/src/app/modules/main/pages/home/home.component.css
@@ -25,7 +25,7 @@
   background-size: auto;
   background-position: center; 
   background-repeat: no-repeat;
-  background-image: url("/../../assets/img/banner-img-2.jpg");
+  background-image: url("assets/img/banner-img-2.jpg");
 }
 
 /* SECOND  */
@@ -44,7 +44,7 @@
   background-color: #380f91;
   background-position: center; 
   background-repeat: no-repeat;
-  background-image: url("/../../assets/img/property_hall.png");
+  background-image: url("assets/img/property_hall.png");
 }
 
 .event-card-right {
